--- a/index.html
+++ b/index.html
@@ -5,53 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=>, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <a href="./index.html">WebStudio</a>
-      <nav>
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./index.html">Портфоліо</a></li>
-          <li><a href="./index.html">Контакти</a></li>
+      <a href="./index.html" class="logo link"
+        ><span class="first-part">Web</span><span class="last-part"> Studio</span></a
+      >
+      <nav class="site-nav">
+        <ul class="site-list list">
+          <li><a class="site-link link" href="./index.html">Студія</a></li>
+          <li><a class="site-link link" href="./portfolio.html">Портфоліо</a></li>
+          <li><a class="site-link link" href="./index.html">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <section class="hero">
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="btn btn-primary">Замовити послугу</button>
       </section>
-      <section class="list">
-        <h2>Список наших основних завдань</h2>
-        <ul>
-          <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+      <section class="feature">
+        <h2 class="visually-hidden">Список наших основних завдань</h2>
+        <ul class="list">
+          <li class="feature-list">
+            <h3 class="feature-list-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="feature-list-item">
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <h3 class="feature-list-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="feature-list-item">
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <h3 class="feature-list-title">ПЛАНУВАННЯ</h3>
+            <p class="feature-list-item">
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <h3 class="feature-list-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="feature-list-item">
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
           </li>
         </ul>
       </section>
       <section class="about-work">
-        <h2>Чим ми займаємося</h2>
-        <ul>
+        <h2 class="work-title">Чим ми займаємося</h2>
+        <ul class="list">
           <li>
             <img src="./img/box1.jpg" alt="design project on computer" width="370" />
           </li>
@@ -64,37 +81,40 @@
         </ul>
       </section>
       <section class="team">
-        <h2>Наша команда</h2>
-        <ul>
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="list">
           <li>
             <img src="./img/person1.jpg" alt="team member1" width="270" />
-            <h3>Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-member">Ігор Дем'яненко</h3>
+            <p class="team-position" lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./img/person2.jpg" alt="team member2" width="270" />
-            <h3>Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-member">Ольга Рєпіна</h3>
+            <p class="team-position" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./img/person3.jpg" alt="team member3" width="270" />
-            <h3>Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-member">Микола Тарасов</h3>
+            <p class="team-position" lang="en">Marketing</p>
           </li>
           <li>
             <img src="./img/person4.jpg" alt="team member4" width="270" />
-            <h3>Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-member">Михайло Єрмаков</h3>
+            <p class="team-position" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>
-        <ul>
+    <footer class="footer-address">
+      <a href="./index.html" class="logo link"
+        ><span class="first-part">Web</span><span class="last-part-second"> Studio</span></a
+      >
+      <address class="address-list">
+        <ul class="list">
           <li>
             <a
+              class="address-item link"
               href="https://goo.gl/maps/er9QxfjBZCahhvQG7"
               target="_blank"
               rel="noopener noreferrer nofollow"
@@ -102,10 +122,10 @@
             >
           </li>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
