--- a/portfolio.html
+++ b/portfolio.html
@@ -5,91 +5,100 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=>, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <a href="./index.html">WebStudio</a>
-      <nav>
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./index.html">Портфоліо</a></li>
-          <li><a href="./index.html">Контакти</a></li>
+      <a href="./index.html" class="logo link"
+        ><span class="first-part">Web</span><span class="last-part">Studio</span>/a
+      >
+      <nav class="site-nav">
+        <ul class="site-list list">
+          <li><a class="site-link link" href="./index.html">Студія</a></li>
+          <li><a class="site-link link" href="./index.html" >Портфоліо</a></li>
+          <li><a class="site-link link" href="./index.html" >Контакти</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section>
-        <ul>
-          <li>Усі</li>
-          <li>Веб-сайти</li>
-          <li>Додатки</li>
-          <li>Дизайн</li>
-          <li>Маркетинг</li>
+      <section class="projects">
+        <h1 class="visually-hidden">Проекти</h1>
+        <ul class="list">
+          <li><button class="btn-header btn" type="button">Усі</button></li>
+          <li><button class="btn-header btn" type="button">Веб-сайти</button></li>
+          <li><button class="btn-header btn" type="button">Додатки</button></li>
+          <li><button class="btn-header btn" type="button">Дизайн</button></li>
+          <li><button class="btn-header btn" type="button">Маркетинг</button></li>
         </ul>
-      </section>
-      <section>
-        <h1>Проекти</h1>
-        <ul>
+        <ul class="list">
           <li>
-            <img src="./img/" alt="" width="" />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <img src="./img/project1.jpg" alt="включений ноутбук" width="370" />
+            <h2 class="project-title">Технокряк</h2>
+            <p class="project-item">Веб-сайт</p>
           </li>
           <li>
-            <img src="" alt="" width="" />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <img src="./img/project2.jpg" alt="два баскетболісти" width="370" />
+            <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+            <p class="project-item">Дизайн</p>
           </li>
           <li>
-            <img src="" alt="" width="" />
-            <h2>Ресторан Seafood</h2>
-            <p>Додаток</p>
+            <img src="./img/project3.jpg" alt="назва ресторану" width="370" />
+            <h2 class="project-title">Ресторан Seafood</h2>
+            <p class="project-item">Додаток</p>
           </li>
           <li>
-            <img src="" alt="" width="" />
-            <h2>Проєкт Prime</h2>
-            <p>Маркетинг</p>
+            <img src="./img/project4.jpg" alt="навушники безпровідні" width="370" />
+            <h2 class="project-title">Проєкт Prime</h2>
+            <p class="project-item">Маркетинг</p>
           </li>
           <li>
-            <img src="" alt="" width="" />
-            <h2>Проєкт Boxes</h2>
-            <p>Додаток</p>
+            <img src="./img/project5.jpg" alt="дві коробки" width="370" />
+            <h2 class="project-title">Проєкт Boxes</h2>
+            <p class="project-item">Додаток</p>
           </li>
           <li>
-            <img src="" alt="" width="" />
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <img src="img/project6.jpg" alt="відкритий браузер" width="370" />
+            <h2 class="project-title">Inspiration has no Borders</h2>
+            <p class="project-item">Веб-сайт</p>
           </li>
           <li>
-            <img src="" alt="" width="" />
-            <h2>Видання Limited Edition</h2>
-            <p>Дизайн</p>
+            <img src="./img/project7.jpg" alt="відкритий журнал" width="370" />
+            <h2 class="project-title">Видання Limited Edition</h2>
+            <p class="project-item">Дизайн</p>
           </li>
           <li>
-            <img src="" alt="" width="" />
-            <h2>Проєкт LAB</h2>
-            <p>Маркетинг</p>
+            <img src="./img/project8.jpg" alt="етикетка з назвою фірми" width="370" />
+            <h2 class="project-title">Проєкт LAB</h2>
+            <p class="project-item">Маркетинг</p>
           </li>
           <li>
-            <img src="" alt="" width="" />
-            <h2>Growing Business</h2>
-            <p>Додаток</p>
+            <img src="./img/project9.jpg" alt="людина працює за ноутбуком" width="370" />
+            <h2 class="project-title">Growing Business</h2>
+            <p class="project-item">Додаток</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
       <a href="./index.html">WebStudio</a>
-      <address>
-        <ul>
+      <address class="footer-address">
+        <ul class="list">
           <li>
             <a
+              class="address-item link"
               href="https://goo.gl/maps/er9QxfjBZCahhvQG7"
               target="_blank"
               rel="noopener noreferrer nofollow"
@@ -97,10 +106,10 @@
             >
           </li>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
