update css styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,28 +16,29 @@
   <body>
     <header>
       <a href="./index.html" class="logo link"
-        ><span class="first-part">Web</span><span class="last-part">Studio</span>/a
+        ><span class="first-part">Web</span><span class="last-part"> Studio</span></a
       >
       <nav class="site-nav">
         <ul class="site-list list">
-          <li><a class="site-link link" href="./index.html">Студія</a></li>
-          <li><a class="site-link link" href="./index.html" >Портфоліо</a></li>
-          <li><a class="site-link link" href="./index.html" >Контакти</a></li>
+          <li><a class="site-link current-link link" href="./index.html">Студія</a></li>
+          <li><a class="site-link link" href="./portfolio.html">Портфоліо</a></li>
+          <li><a class="site-link link" href="./index.html">Контакти</a></li>
         </ul>
       </nav>
       <ul class="list">
         <li>
-          <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="site-link mail-link link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
         </li>
-        <li>
-          <a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a class="site-link tel-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <section class="projects">
         <h1 class="visually-hidden">Проекти</h1>
         <ul class="list">
-          <li><button class="btn-header btn" type="button">Усі</button></li>
+          <li><button class="btn-header current-btn btn" type="button">Усі</button></li>
           <li><button class="btn-header btn" type="button">Веб-сайти</button></li>
           <li><button class="btn-header btn" type="button">Додатки</button></li>
           <li><button class="btn-header btn" type="button">Дизайн</button></li>
