--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
       >
       <nav class="site-nav">
         <ul class="site-list list">
-          <li><a class="site-link link" href="./index.html">Студія</a></li>
+          <li><a class="site-link current-link link" href="./index.html">Студія</a></li>
           <li><a class="site-link link" href="./portfolio.html">Портфоліо</a></li>
           <li><a class="site-link link" href="./index.html">Контакти</a></li>
         </ul>
       </nav>
       <ul class="list">
         <li>
-          <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="site-link mail-link link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
         </li>
-        <li><a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a class="site-link tel-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
