--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <a href="./index.html" class="logo link"
-        ><span class="first-part">Web</span><span class="last-part"> Studio</span></a
+        ><span class="first-part">Web</span><span class="last-part">Studio</span></a
       >
       <nav class="site-nav">
         <ul class="site-list list">
@@ -37,7 +37,7 @@
     <main>
       <section class="hero">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="btn btn-primary">Замовити послугу</button>
+        <button type="button" class="btn-primary">Замовити послугу</button>
       </section>
       <section class="feature">
         <h2 class="visually-hidden">Список наших основних завдань</h2>
@@ -110,7 +110,7 @@
     </main>
     <footer class="footer-address">
       <a href="./index.html" class="logo link"
-        ><span class="first-part">Web</span><span class="last-part-second"> Studio</span></a
+        ><span class="first-part">Web</span><span class="last-part-second">Studio</span></a
       >
       <address class="address-list">
         <ul class="list">
@@ -124,10 +124,14 @@
             >
           </li>
           <li>
-            <a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="address-item address-second link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a class="address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="address-item address-second link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </address>
