--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <a href="./index.html" class="logo link"
-        ><span class="first-part">Web</span><span class="last-part"> Studio</span></a
+        ><span class="first-part">Web</span><span class="last-part">Studio</span></a
       >
       <nav class="site-nav">
         <ul class="site-list list">
@@ -93,9 +93,11 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address class="footer-address">
+    <footer class="footer-address">
+      <a href="./index.html" class="logo link"
+        ><span class="first-part">Web</span><span class="last-part-second">Studio</span></a
+      >
+      <address class="address-list">
         <ul class="list">
           <li>
             <a
@@ -107,10 +109,14 @@
             >
           </li>
           <li>
-            <a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="address-item address-second link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a class="address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="address-item address-second link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </address>
